멀티모듈 세팅중

--- a/housebook-common/src/main/resources/application.properties
+++ b/housebook-common/src/main/resources/application.properties
@@ -13,8 +13,11 @@ logging.level.org.hibernate.type.EnumType=trace
 
 spring.jpa.hibernate.ddl-auto: create
 
-#spring.datasource.url=jdbc:h2:~/testLyae
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testLyae
+#spring.datasource.url=jdbc:h2:~/housebook-local
+#spring.datasource.url=jdbc:h2:D:/dev/h2/db/housebook-local
+spring.datasource.url=jdbc:h2:tcp://localhost/~/housebook-local
+#spring.datasource.url=jdbc:h2:file:./housebook-local
+#spring.datasource.url=jdbc:h2:~/housebook-local
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
