--- a/housebook-common/src/main/resources-local/application-local.yml
+++ b/housebook-common/src/main/resources-local/application-local.yml
@@ -30,7 +30,8 @@ spring:
         use_sql_comments: true
 
   datasource:
-    url: jdbc:h2:tcp://localhost/~/housebook-local
+    url: jdbc:h2:mem:housebook-local
+    #    url: jdbc:h2:tcp://localhost/~/housebook-local
     username: sa
     password:
     driver-class-name: org.h2.Driver
