도메인 연관관계 매핑 설계 - 테스트 코드 작성(Member, PayType)

--- a/housebook-common/src/main/resources-local/application-local.yml
+++ b/housebook-common/src/main/resources-local/application-local.yml
@@ -4,7 +4,7 @@ logging:
       hibernate:
         type:
           descriptor:
-            sql: trace
+            sql: trace #sql (Bind Parameter) 출력
 #            BasicBinder: trace
 #            EnumType: trace
 
